<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.hitotech.neighbour.activity.LoginActivity">

    <include layout="@layout/comm_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="手机号"
                android:textSize="16sp" />

            <com.hitotech.neighbour.widget.ClearableEditText
                android:id="@+id/text_phone"
                style="@style/LoginEdittextStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:hint="@string/input_phone_hint"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey800" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="密码"
                android:textSize="16sp" />

            <com.hitotech.neighbour.widget.ClearableEditText
                android:id="@+id/text_password"
                style="@style/LoginEdittextStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:maxLength="16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey800" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_solid_bg"
            android:text="登录" />

        <Button
            android:id="@+id/btn_to_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_stroke_bg"
            android:text="注册账号"
            android:textColor="@color/dark_yellow" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_forget_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="忘了密码?"
                android:textColor="@color/grey700" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
