<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.hitotech.neighbour.activity.ResetPswActivity">

    <include layout="@layout/comm_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="手机号"
                android:textSize="16sp" />

            <com.hitotech.neighbour.widget.ClearableEditText
                android:id="@+id/text_phone"
                style="@style/LoginEdittextStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:hint="@string/input_phone_hint"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="验证码"
                android:textSize="16sp" />

            <com.hitotech.neighbour.widget.ClearableEditText
                android:id="@+id/text_code"
                style="@style/LoginEdittextStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:hint="@string/input_code_hint"
                android:inputType="number"
                android:maxLength="6" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.2">

                <com.hitotech.neighbour.widget.TimeButton
                    android:id="@+id/btn_get_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_stroke_bg"
                    android:text="获取验证码"
                    android:textColor="@color/dark_yellow"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.1dp"
                android:layout_weight="2.8"
                android:background="@color/grey800" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="新密码"
                android:textSize="16sp" />

            <com.hitotech.neighbour.widget.ClearableEditText
                android:id="@+id/text_new_password"
                style="@style/LoginEdittextStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:hint="@string/input_new_password"
                android:inputType="textPassword"
                android:maxLength="16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="确认密码"
                android:textSize="16sp" />

            <com.hitotech.neighbour.widget.ClearableEditText
                android:id="@+id/text_confirm_password"
                style="@style/LoginEdittextStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:hint="@string/input_confirm_password"
                android:inputType="textPassword"
                android:maxLength="16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey800" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_solid_bg"
            android:text="确定" />

    </LinearLayout>

</LinearLayout>
