<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:gravity="center_horizontal">

                <com.yyydjk.library.BannerLayout
                    android:id="@+id/banner_home"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    app:defaultImage="@drawable/bg_advertise"
                    app:indicatorMargin="5dp"
                    app:indicatorPosition="centerBottom"
                    app:indicatorShape="oval"
                    app:indicatorSpace="3dp"
                    app:scrollDuration="1100"
                    app:selectedIndicatorColor="@android:color/holo_red_dark"
                    app:selectedIndicatorHeight="6dp"
                    app:selectedIndicatorWidth="6dp"
                    app:unSelectedIndicatorColor="@android:color/white"
                    app:unSelectedIndicatorHeight="6dp"
                    app:unSelectedIndicatorWidth="6dp" />

                <LinearLayout
                    android:id="@+id/layout_location"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_location_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/icon_location" />

                    <TextView
                        android:id="@+id/text_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/app_name"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_forward_white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_service_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/icon_property_phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="物业电话"
                        android:textColor="@color/grey700"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="贴心服务" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/grey400" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:id="@+id/layout_guest_request"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/guest_bg_color">

                        <ImageView
                            android:id="@+id/image_guest_request"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/icon_guest_requet" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/image_guest_request"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/guest_title_string"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/guest_hint_string"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layout_open_door"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/open_door_bg">

                        <ImageView
                            android:id="@+id/image_open_door"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/icon_open_door" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/image_open_door"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/open_door_string"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/open_door_hint"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="管家服务" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/grey400" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_house_keep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:scrollbars="none" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>